# Deterministic-Payment-Simulation-Engine-with-Time-Travel-Debugging

./: README.md  package-lock.json  package.json  server.ts  vite.config.ts
payment-engine/: payment-engine.cabal  stack.yaml
payment-engine/app/: Main.hs
payment-engine/src/Domain/: StateMachine.hs  Types.hs
payment-engine/src/Engine/: Core.hs  DSL.hs  STM.hs
payment-engine/src/Observability/: Metrics.hs
payment-engine/src/Simulation/: Generator.hs
payment-engine/test/: Spec.hs
src/: App.tsx  engine.ts  index.css  types.ts  useHaskellEngine.ts
